# askai

./: .gitconfig  .gitignore  AskAI.code-workspace  LICENSE.md  Makefile  README.md  _config.yml  build.gradle  buildTools.txt  bumpver.toml  dependencies.hspd  gradle.properties  pyproject.toml  settings.gradle  test.bash
.github/: FUNDING.yml
.github/workflows/: build-and-test.yml  create-release.yml  publish.yml  pypi-deploy.yml
.run/: Ask Help.run.xml  Ask Interactive Mute.run.xml  Ask Interactive.run.xml
assets/ascii-art/: askai-logo.txt  splash-orig.txt  splash-robota.txt  splash-skull.txt
assets/images/: askai-logo.txt
assets/scripts/: cleanup-packages.sh
docs/: CHANGELOG.md  CONTRIBUTING.md
docs/api/askai/: index.html  search.js
docs/devel/: askai-modules.txt  askai-questions.txt  new-arc-ai-resp-sample.json  setup-2.txt  setup-sample.txt  techweek-welcome.txt
docs/devel/misc/: askai-issues.txt  askai-modules.txt  askai-questions.txt  icons.csv  icons.txt  lc-agent.txt  lc-rag.txt  lc_prompt.txt  reminder-2023.txt  reminder-2024.txt  task-split-examples.txt
docs/devel/prompts/: capabilities.txt  it-and-number-bug.txt  router-examples.txt  setup-1.txt  setup-sample.txt
docs/devel/snippets/: snippet-1-re-path.txt  snippet-2-re-cmd.txt  snippet-3-internet.txt
docs/devel/textual_demos/: bind_demo.py  (+5 more)
gradle/: dependencies.gradle  docgen.gradle  docker.gradle  idea.gradle  oracle.gradle  poetry.gradle  pypi-publish.gradle  python.gradle  versioning.gradle
gradle/devel/: poetry.gradle
run-configs/idea/: AskAI_.xml  AskAI_Interactive___MODEL.xml  AskAI___GPT_3_5_Turbo.xml  AskAI___GPT_3_5_Turbo___pt_BR.xml  AskAI___GPT_4.xml  AskAI___GPT_4___pt_BR.xml  AskAI___Interactive.xml  AskAI___Interactive___GPT_4.xml  AskAI___Interactive___GPT_4___Quiet.xml  AskAI___Interactive___Quiet_.xml  AskAI___Interactive___Quiet___GPT_4.xml  AskAI___Interactive___Quiet___pt_BR.xml  AskAI___Interactive___pt_BR.xml  AskAI___pt_BR.xml  Ask_Interactive___GPT_4.xml  Ask_Interactive___GPT_4___Mute.xml  Ask_Interactive___MODEL.xml
src/demo/: __init__.py  openai-api-full-demo.py  run.sh  sports_api.py  utils.py
src/main/: MANIFEST.in  README.md  __init__.py  requirements.txt  setup.py
src/test/: __init__.py  test_main.py
(+1602 files in other folders)
