[build-system]

requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]

name = "hspylib-askai"
version = "1.0.12"
description = "HomeSetup - AskAI"
authors = ["Hugo Saporetti Junior <yorevs@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]

python = ">=3.10"

[tool.poetry.dev-dependencies]

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
